<resources>
    <string name="app_name">Shaut</string>
    <string name="done">Done</string>

    <string name="hello_world">Hello World!</string>

    <string name="city_name">City name</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="move">Move!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Log Out</string>
    <string name="other">Other</string>

    <string name="action_settings">Settings</string>

    <!--content descriptions-->
    <string name="profile_picture">Profile picture</string>
    <string name="logo">Company Logo</string>
    <string name="username">Username</string>
    <string name="shaut_content">Shaut message content</string>
    <string name="dislike_button">Dislike button</string>
    <string name="like_button">Like button</string>
    <string name="like_number">Number of likes</string>
    <string name="dislike_number">Number of dislikes</string>
    <string name="send_button">Send button</string>
    <string name="new_shaut">New Shaut button</string>
    <string name="add_friend_button">Add friend button</string>
    <string name="decline_request_button">Decline request buton</string>
    <string name="accept_request_button">Accept request buton</string>

    <!--Warning messages-->
    <string name="no_city_selected">No city selected!</string>
    <string name="something_wrong">Something went wrong</string>
    <string name="no_name">No name!</string>
    <string name="connectivity_lost">Connectivity lost!</string>


    <!--Messages-->
    <string name="friend_request_sent">Friend request sent!</string>
    <string name="accepted">Accepted new friend!</string>
    <string name="declined">Declined friendship</string>
    <string name="nothing_here">Nothing to see here...</string>
    <string name="no_requests">No friend requests.</string>
    <string name="friendship_greeting">Welcome to friendship!</string>

    <!--list item chatroom-->
    <string name="default_first_letter">\?</string>

    <!--MessageActivity-->
    <string name="hint_type_message">Type message here</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!--ProfileEditorActivity-->
    <string name="saved">Saved!</string>
</resources>
