<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/nav_edit_profile"
            android:icon="@drawable/ic_create_white_24px"
            android:title="@string/edit_profile" />

        <item
            android:id="@+id/nav_move"
            android:icon="@drawable/ic_location_city_white_24px"
            android:title="@string/move" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit_to_app_white_24px"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
