<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        android:id="@+id/include_profilePicture"
        layout="@layout/imageview_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_children_vertical"
        android:layout_marginStart="@dimen/profile_picture_editor_margin_horizontal"
        android:layout_marginTop="@dimen/margin_children_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName" />

    <TextView
        android:id="@+id/textView_shaut_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_children_vertical"
        android:layout_marginEnd="@dimen/margin_children_horizontal"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/shaut_content"
        app:layout_constraintBottom_toTopOf="@+id/button_accept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/include_profilePicture"
        app:layout_constraintTop_toTopOf="@+id/include_profilePicture"
        tools:text="TextView" />


    <ImageButton
        android:id="@+id/button_decline"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_children_vertical"
        android:layout_marginEnd="@dimen/margin_children_horizontal"
        android:contentDescription="@string/decline_request_button"
        android:src="@drawable/ic_close_black_18px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/button_accept"
        style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_children_vertical"
        android:layout_marginEnd="@dimen/margin_children_horizontal"
        android:contentDescription="@string/accept_request_button"
        android:src="@drawable/ic_done_black_18px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_decline" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_children_vertical"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/include_profilePicture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="TextView" />

</android.support.constraint.ConstraintLayout>